# mp_mood-architect

./: .pre-commit-config.yaml  README.md  biome.json
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_develop.sh
backend/app/: main.py
backend/app/api/: affirmation.py
backend/app/core/: config.py  exceptions.py
backend/app/integrations/: openai_client.py
backend/app/models/: affirmation.py
backend/app/services/: affirmation_service.py
web-client/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
web-client/src/: App.tsx  index.css  main.tsx
web-client/src/components/affirmation/: AffirmationForm.tsx  AffirmationResult.tsx  AffirmationSkeleton.tsx
web-client/src/components/layout/: Footer.tsx  Header.tsx
web-client/src/hooks/: use-affirmation.ts
web-client/src/lib/: axios.ts
web-client/src/providers/: query-provider.tsx
web-client/src/schemas/: affirmation.ts
